--- a/Aulas/create-server-example/package.json
+++ b/Aulas/create-server-example/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "create-server-example",
+  "name": "@dev-demands/root",
   "version": "1.0.0",
-  "private": true,
-  "main": "src/main.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-    "start": "node -r esm src/main"
   },
+  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "description": ""
 }
